Updated Styles, HTML & JS

--- a/album.html
+++ b/album.html
@@ -18,7 +18,7 @@
     <title>Album</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="containerFluid container-fluid">
       <div class="row">
         <!-- NAVBAR -->
         <div id="first" class="col-2">
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <hr />
-          <ul id="nav-2" class="nav flex-column">
+          <ul id="nav-2" class="navActions">
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center" href="#">
                 <div
@@ -86,7 +86,7 @@
             </li>
           </ul>
           <hr style="border: solid 0.5px rgba(128, 128, 128, 0.43)" />
-          <ul id="nav-3" class="nav flex-column">
+          <ul id="nav-3" class="navScroll">
             <li class="nav-item">
               <a class="nav-link active" href="#">Funky Heavy Bluesy</a>
             </li>
@@ -100,7 +100,7 @@
               <a class="nav-link" href="#">This is Rod Stewart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">FRANCHISE ft.Young Thug...</a>
+              <a class="nav-link" href="#">FRANCHISE ft.Young Thug...</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Your Top Songs 2019</a>
@@ -112,7 +112,7 @@
               <a class="nav-link" href="#">This is Joe Bonamassa</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Jun19</a>
+              <a class="nav-link" href="#">Jun19</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Jack 30th Party 2</a>
@@ -124,7 +124,7 @@
               <a class="nav-link" href="#">This is Opeth</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Metal Ballads</a>
+              <a class="nav-link" href="#">Metal Ballads</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">New Playlist</a>
@@ -136,7 +136,7 @@
               <a class="nav-link" href="#">Jazz Classics Blue Note Editi...</a>
             </li>
           </ul>
-          <ul id="nav-4" class="nav flex-column">
+          <ul id="nav-4" class="nav">
             <li class="nav-item">
               <a class="nav-link" href="#"
                 ><i class="bi bi-arrow-down-circle"></i>
@@ -233,7 +233,7 @@
             </div>
           </div>
           <!-- Table -->
-          <div class="row bgBlackTransparent">
+          <div class="row bgBlackTransparent scrollit pb-0">
             <table class="table table-borderless mx-3 mt-3 text-white">
               <thead class="theadBorderBottom">
                 <tr>
@@ -244,7 +244,7 @@
                   </th>
                 </tr>
               </thead>
-              <tbody id="trackTable">
+              <tbody id="trackTable" class="scrollit">
                 <tr>
                   <th class="thMinWidth" scope="row">1</th>
                   <td class="d-flex flex-column">
