--- a/welcome.html
+++ b/welcome.html
@@ -753,7 +753,7 @@
         src="https://kit.fontawesome.com/23cecef777.js"
         crossorigin="anonymous"
       ></script>
-      <script src="album.js"></script>
+      <script src="welcome.js"></script>
       <script
         src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
