--- a/welcome.html
+++ b/welcome.html
@@ -239,8 +239,8 @@
           <!--Horizontal Cards-->
           
           <h1 class="mt-5 ml-2 mb-5">Good morning</h1>
-          <div class="con">
-          
+          <div>
+            <div id="con" class="gridofcards d-flex justify-content-between">
         </div>
           <!--Horizontal card p.2-->
           <div class="cont">
