--- a/search.html
+++ b/search.html
@@ -208,28 +208,40 @@
               </div>
             </div>
             <div class="row">
-              <div class="col mt-3 d-flex">
+              <div class="col-12 mt-3 d-flex">
                 <div
-                  class="options rounded-pill px-3 py-1 text-white mr-2 active"
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center active"
                 >
                   All
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Songs
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Artists
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Playlists
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Albums
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Podcasts and Shows
                 </div>
-                <div class="options rounded-pill px-3 py-1 text-white mr-2">
+                <div
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center"
+                >
                   Profile
                 </div>
               </div>
@@ -242,98 +254,56 @@
               <thead class="theadBorderBottom">
                 <tr>
                   <th class="thMinWidth" scope="col">#</th>
-                  <th scope="col">TITLE</th>
+                  <th scope="col">Tracks</th>
+                  <th scope="col" class="pl-5">Album</th>
                   <th scope="col" class="text-right pr-5">
                     <i class="bi bi-clock"></i>
                   </th>
                 </tr>
               </thead>
-              <tbody id="trackTable" class="scrollit">
+              <tbody id="albumTable" class="scrollit">
                 <tr>
                   <th class="thMinWidth" scope="row">1</th>
                   <td class="d-flex flex-column">
-                    <div class="tableTitle">20th Century Fox Fanture</div>
-                    <div class="tableArtist">Queen</div>
+                    <div class="tableTitle">
+                      <a href="#" class="links"> 20th Century Fox Fanture</a>
+                    </div>
+                    <div class="tableArtist">
+                      <a href="#" class="links">Queen</a>
+                    </div>
+                  </td>
+                  <td class="tableAlbum">
+                    <a href="#" class="links">The Eminem Show</a>
                   </td>
                   <td class="text-right pr-5">0:25</td>
                 </tr>
                 <tr>
                   <th class="thMinWidth" scope="row">2</th>
                   <td class="d-flex flex-column">
-                    <div class="tableTitle">Somebody To Love</div>
-                    <div class="tableArtist">Queen</div>
+                    <div class="tableTitle">
+                      <a href="#" class="links">Somebody To Love</a>
+                    </div>
+                    <div class="tableArtist">
+                      <a href="#" class="links">Queen</a>
+                    </div>
+                  </td>
+                  <td class="tableAlbum">
+                    <a href="#" class="links">The Eminem Show</a>
                   </td>
                   <td class="text-right pr-5">4:55</td>
                 </tr>
                 <tr>
                   <th class="thMinWidth" scope="row">3</th>
                   <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
+                    <div class="tableTitle">
+                      <a href="#" class="links">Doing All Right - Revisited</a>
+                    </div>
+                    <div class="tableArtist">
+                      <a href="#" class="links">Queen</a>
+                    </div>
                   </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">Doing All Right - Revisited</div>
-                    <div class="tableArtist">Queen</div>
+                  <td class="tableAlbum">
+                    <a href="#" class="links">The Eminem Show</a>
                   </td>
                   <td class="text-right pr-5">3:16</td>
                 </tr>
@@ -433,7 +403,7 @@
         </div>
       </div>
     </div>
-    <script src="album.js"></script>
+    <script src="search.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
