--- a/artist-page.html
+++ b/artist-page.html
@@ -142,13 +142,14 @@
           </ul>
         </div>
         <div class="container col-10" id="main-container">
-          <div class="container d-flex flex-column align-items-start justify-content-end pl-0">
-            <div class="d-flex mt-5">
+          <img src="https://express-images.franklymedia.com/6616/sites/157/2020/11/09142131/Queen-Adam-Lambert-Live-around-the-world.png" alt="" id="main-image">
+          <div class="container d-flex flex-column align-items-start justify-content-end pl-0" id="text-container">
+            <div class="d-flex mr-0 pr-0">
               <i class="bi bi-patch-check-fill" id="verified-btn"></i>
               <p class="lead">Verified artist</p>
             </div>
-            <h1 class="d-flex mt-5">Queen</h1>
-            <p class="mt-5">
+            <h1 class="d-flex mt-0">Queen</h1>
+            <p class="mt-3" id="monthly-listeners">
               37,120,133 monthly listeners
             </p>
           </div>
@@ -172,12 +173,6 @@
               Follow
             </p>
             <p class="d-inline" style="margin-block: auto" id="dots">...</p>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Search for an artist by ID" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-primary" id="search-btn">Search</button>
-              </div>
-            </div>
           </div>
           <div class="container mt-5" id="playlist">
             <div class="row" id="playlist-row">
@@ -187,62 +182,62 @@
               </div>
               <div class="col-12 d-flex pl-0" id="playlist-column">
                 <ul class="list-group col-10 pb-0" id="playlist-list">
-                  <li class="list-group-item d-flex pb-0">
+                  <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">1</p>
                     <img
-                      class="col-md-2 album-list-cover"
+                      class="col-md-2 album-list-cover band-pic" id="test-band-pic"
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3">
+                    <p class="col-md-3 track-title" id="test-band-name">
                       Another One Bites The Dust - Remastered 2011
                     </p>
-                    <p class="col-md-3">1,013,238,772</p>
-                    <p class="col-md-3">3:34</p>
+                    <p class="col-md-3 rank" id="test-rank">1,013,238,772</p>
+                    <p class="col-md-3 duration" id="test-duration">3:34</p>
                   </li>
-                  <li class="list-group-item d-flex pb-0">
+                  <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">2</p>
                     <img
-                      class="col-md-2 album-list-cover"
+                      class="col-md-2 album-list-cover band-pic"
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-md-3">Bohemian Rhapsody - Remastered 2011</p>
-                    <p class="col-md-3">1,497,986,258</p>
-                    <p class="col-md-3">5:54</p>
+                    <p class="col-md-3 track-title">Bohemian Rhapsody - Remastered 2011</p>
+                    <p class="col-md-3 rank">1,497,986,258</p>
+                    <p class="col-md-3 duration">5:54</p>
                   </li>
-                  <li class="list-group-item d-flex pb-0">
+                  <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">3</p>
                     <img
-                      class="col-md-2 album-list-cover"
+                      class="col-md-2 album-list-cover band-pic"
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3">Don't Stop Me Now - Remastered 2011</p>
-                    <p class="col-md-3">1,063,959,983</p>
-                    <p class="col-md-3">3:29</p>
+                    <p class="col-md-3 track-title">Don't Stop Me Now - Remastered 2011</p>
+                    <p class="col-md-3 rank">1,063,959,983</p>
+                    <p class="col-md-3 duration">3:29</p>
                   </li>
-                  <li class="list-group-item d-flex pb-0">
+                  <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">4</p>
                     <img
-                      class="col-md-2 album-list-cover"
+                      class="col-md-2 album-list-cover band-pic"
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-md-3">Under Pressure - Remastered 2011</p>
-                    <p class="col-md-3">900,225,026</p>
-                    <p class="col-md-3">4:08</p>
+                    <p class="col-md-3 track-title">Under Pressure - Remastered 2011</p>
+                    <p class="col-md-3 rank">900,225,026</p>
+                    <p class="col-md-3 duration">4:08</p>
                   </li>
-                  <li class="list-group-item d-flex pb-0">
+                  <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">5</p>
                     <img
-                      class="col-md-2 album-list-cover"
+                      class="col-md-2 album-list-cover band-pic"
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3">We Will Rock You - Remastered</p>
-                    <p class="col-md-3">705,225,721</p>
-                    <p class="col-md-3">2:02</p>
+                    <p class="col-md-3 track-title">We Will Rock You - Remastered</p>
+                    <p class="col-md-3 rank">705,225,721</p>
+                    <p class="col-md-3 duration">2:02</p>
                   </li>
                   <li id="see-more"><p class="col-12">See more</p></li>
                 </ul>
@@ -253,7 +248,7 @@
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                     alt="Queen"
                   />
-                  <p>Queen best of</p>
+                  <p class="current-track-title">Queen best of</p>
                   <figcaption>Playlist</figcaption>
                   </li>
                 </ul>
