Functions on Music Player added

--- a/search.html
+++ b/search.html
@@ -210,7 +210,7 @@
             <div class="row">
               <div class="col-12 mt-3 d-flex">
                 <div
-                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center active"
+                  class="options rounded-pill px-3 py-1 text-white mr-2 d-flex align-self-center justify-content-center activeOption"
                 >
                   All
                 </div>
@@ -261,53 +261,7 @@
                   </th>
                 </tr>
               </thead>
-              <tbody id="albumTable" class="scrollit">
-                <tr>
-                  <th class="thMinWidth" scope="row">1</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">
-                      <a href="#" class="links"> 20th Century Fox Fanture</a>
-                    </div>
-                    <div class="tableArtist">
-                      <a href="#" class="links">Queen</a>
-                    </div>
-                  </td>
-                  <td class="tableAlbum">
-                    <a href="#" class="links">The Eminem Show</a>
-                  </td>
-                  <td class="text-right pr-5">0:25</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">2</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">
-                      <a href="#" class="links">Somebody To Love</a>
-                    </div>
-                    <div class="tableArtist">
-                      <a href="#" class="links">Queen</a>
-                    </div>
-                  </td>
-                  <td class="tableAlbum">
-                    <a href="#" class="links">The Eminem Show</a>
-                  </td>
-                  <td class="text-right pr-5">4:55</td>
-                </tr>
-                <tr>
-                  <th class="thMinWidth" scope="row">3</th>
-                  <td class="d-flex flex-column">
-                    <div class="tableTitle">
-                      <a href="#" class="links">Doing All Right - Revisited</a>
-                    </div>
-                    <div class="tableArtist">
-                      <a href="#" class="links">Queen</a>
-                    </div>
-                  </td>
-                  <td class="tableAlbum">
-                    <a href="#" class="links">The Eminem Show</a>
-                  </td>
-                  <td class="text-right pr-5">3:16</td>
-                </tr>
-              </tbody>
+              <tbody id="albumTable" class="scrollit"></tbody>
             </table>
           </div>
         </div>
@@ -354,7 +308,7 @@
             <div
               class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
             >
-              <i class="bi bi-play-fill"></i>
+              <a href="" class="links"><i class="bi bi-play-fill"></i></a>
             </div>
             <div
               class="iconNext px-2 d-flex justify-content-center align-items-center"
@@ -371,7 +325,7 @@
           <div
             class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
           >
-            <div class="timePlayed">0:12</div>
+            <div class="timePlayed">0:00</div>
             <div class="progress mx-2" style="height: 2px">
               <div
                 class="progress-bar bg-white"
