--- a/welcome.html
+++ b/welcome.html
@@ -21,7 +21,7 @@
     <div id="s1" class="container-fluid">
       <div id="n1" class="row">
         <!--Sidebar-->
-        <div id="first" class="col-10 col-md-3 col-l-2 col-xl-2">
+        <div id="first" class="col-3 col-md-3 col-l-2 col-xl-2">
           <ul id="nav-1" class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link my-3" href="#">
@@ -148,7 +148,7 @@
 
         <!--Main Page-->
         <!--Prev,Next Buttons-->
-        <div id="col-10" class="col-sm-12 col-md-12 col-lg-12 col-xl-10">
+        <div id="col-10" class="col-sm-12 col-md-9 col-lg-9 col-xl-10">
           <div class="row">
             <div class="col d-flex justify-content-start">
               <div class="prev-next-buttons">
@@ -250,7 +250,7 @@
           </div>
           <!--Cards-->
 
-          <div class="row" id="undersearch">
+          <div class="row" id="cardstart">
             <h1 class="ml-4 mb-4">Good Morning</h1>
             <div class="col-12 pl-3 row" id="topsidecards">
               <div class="sidecards col-2">
@@ -273,12 +273,12 @@
             </div>
 
             <h2 class="ml-3 mb-4 mt-5">Artists to Try</h2>
-            <div class="col-12 pl-3 row" id="secondAlbumRow">
+            <div class="col-md-8 col-lg-12 pl-3 row" id="secondAlbumRow">
               <div class="albumCard">
                 <img class="col-11" src="" alt="" />
                 <div class="albumText">
                   <p>Artist</p>
-                  <p id="podcast-hook"></p>
+                  <p id="podcast-hook">Check out talented artists!</p>
                 </div>
               </div>
             </div>
