--- a/welcome.html
+++ b/welcome.html
@@ -21,7 +21,7 @@
     <div id="s1" class="container-fluid">
       <div id="n1" class="row">
         <!--Sidebar-->
-        <div id="first" class="col-3 col-md-3 col-l-2 col-xl-2">
+        <div id="first" class="col-3 col-md-4 col-l-4 col-xl-2">
           <ul id="nav-1" class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link my-3" href="#">
@@ -148,7 +148,7 @@
 
         <!--Main Page-->
         <!--Prev,Next Buttons-->
-        <div id="col-10" class="col-sm-12 col-md-9 col-lg-9 col-xl-10">
+        <div id="col-10" class="col-12 col-md-8 col-lg-8 col-xl-10">
           <div class="row">
             <div class="col d-flex justify-content-start">
               <div class="prev-next-buttons">
