--- a/album.html
+++ b/album.html
@@ -42,7 +42,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center" href="#"
+              <a class="nav-link d-flex align-items-center" href="./search.html"
                 ><div
                   class="navIconDivs d-flex justify-content-center align-items-center"
                 >
@@ -206,7 +206,9 @@
                     />
                   </div>
                   <div class="albumInfo d-flex align-items-center ml-1">
-                    <div class="artist">Artist</div>
+                    <div class="artist">
+                      <a href="" class="links">Artist</a>
+                    </div>
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
                     <div class="releaseYear">2022</div>
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
@@ -238,7 +240,7 @@
               <thead class="theadBorderBottom">
                 <tr>
                   <th class="thMinWidth" scope="col">#</th>
-                  <th scope="col">TITLE</th>
+                  <th scope="col">Title</th>
                   <th scope="col" class="text-right pr-5">
                     <i class="bi bi-clock"></i>
                   </th>
@@ -333,7 +335,7 @@
           <div
             class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
           >
-            <div class="timePlayed">0:12</div>
+            <div class="timePlayed">0:00</div>
             <div class="progress mx-2" style="height: 2px">
               <div
                 class="progress-bar bg-white"
