--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="search.css" />
-    <title>Album</title>
+    <title>Search</title>
   </head>
   <body>
     <div class="containerFluid container-fluid">
