--- a/artist.html
+++ b/artist.html
@@ -10,7 +10,7 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/artist.css" />
     <title>Document</title>
   </head>
   <body>
@@ -177,11 +177,11 @@
           <div class="container mt-5" id="playlist">
             <div class="row" id="playlist-row">
               <div class="col-12 d-flex mb-2">
-                <h2 class="col-10 mx-0 px-0">Popular</h2>
-                <h2 class="col-2 mx-0 px-0">Artist Pick</h2>
+                <h2 class="col-sm-12 col-md-12 col-l-10 mx-0 px-0">Popular</h2>
+                <h2 class="col-2 mx-0 px-0" id="tag-pick">Artist Pick</h2>
               </div>
               <div class="col-12 d-flex pl-0" id="playlist-column">
-                <ul class="list-group col-10 pb-0" id="playlist-list">
+                <ul class="list-group col-sm-12 col-md-12 col-l-10 pb-0" id="playlist-list">
                   <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">1</p>
                     <img
@@ -189,7 +189,7 @@
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3 track-title" id="test-band-name">
+                    <p class="col-sm-6 col-md-3 track-title" id="test-band-name">
                       Another One Bites The Dust - Remastered 2011
                     </p>
                     <p class="col-md-3 rank" id="test-rank">1,013,238,772</p>
@@ -202,7 +202,7 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-md-3 track-title">Bohemian Rhapsody - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">Bohemian Rhapsody - Remastered 2011</p>
                     <p class="col-md-3 rank">1,497,986,258</p>
                     <p class="col-md-3 duration">5:54</p>
                   </li>
@@ -213,7 +213,7 @@
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3 track-title">Don't Stop Me Now - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">Don't Stop Me Now - Remastered 2011</p>
                     <p class="col-md-3 rank">1,063,959,983</p>
                     <p class="col-md-3 duration">3:29</p>
                   </li>
@@ -224,7 +224,7 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-md-3 track-title">Under Pressure - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">Under Pressure - Remastered 2011</p>
                     <p class="col-md-3 rank">900,225,026</p>
                     <p class="col-md-3 duration">4:08</p>
                   </li>
@@ -235,14 +235,14 @@
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-md-3 track-title">We Will Rock You - Remastered</p>
+                    <p class="col-sm-6 col-md-3 track-title">We Will Rock You - Remastered</p>
                     <p class="col-md-3 rank">705,225,721</p>
                     <p class="col-md-3 duration">2:02</p>
                   </li>
                   <li id="see-more"><p class="col-12">See more</p></li>
                 </ul>
                 <ul class="list-group col-2 pb-0" id="playlist-current-track">
-                  <li class="list-group-item">
+                  <li class="list-group-item" id="artist-pick">
                     <img
                     class="current-track"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
@@ -363,6 +363,6 @@
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/artist.js"></script>
   </body>
 </html>
