--- a/album.html
+++ b/album.html
@@ -24,7 +24,7 @@
         <div id="first" class="col-2">
           <ul id="nav-1" class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link my-3" href="#">
+              <a class="nav-link my-3" href="welcome.html">
                 <img
                   id="logo"
                   src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_White.png"
@@ -32,7 +32,7 @@
               /></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center" href="#"
+              <a class="nav-link d-flex align-items-center" href="welcome.html"
                 ><div
                   class="navHomeDiv d-flex justify-content-center align-items-center"
                 >
