--- a/artist.html
+++ b/artist.html
@@ -20,7 +20,7 @@
         <div id="first" class="col-2">
           <ul id="nav-1" class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link my-3" href="#">
+              <a class="nav-link my-3" href="welcome.html">
                 <img
                   id="logo"
                   src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_White.png"
@@ -28,7 +28,7 @@
               /></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center" href="#"
+              <a class="nav-link d-flex align-items-center" href="welcome.html"
                 ><div
                   class="navHomeDiv d-flex justify-content-center align-items-center"
                 >
@@ -38,7 +38,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center" href="#"
+              <a class="nav-link d-flex align-items-center" href="search.html"
                 ><div
                   class="navIconDivs d-flex justify-content-center align-items-center"
                 >
@@ -141,9 +141,16 @@
             </li>
           </ul>
         </div>
-        <div class="container col-10" id="main-container">
-          <img src="https://express-images.franklymedia.com/6616/sites/157/2020/11/09142131/Queen-Adam-Lambert-Live-around-the-world.png" alt="" id="main-image">
-          <div class="container d-flex flex-column align-items-start justify-content-end pl-0" id="text-container">
+        <div class="container col-10 px-0" id="main-container">
+          <img
+            src="https://express-images.franklymedia.com/6616/sites/157/2020/11/09142131/Queen-Adam-Lambert-Live-around-the-world.png"
+            alt=""
+            id="main-image"
+          />
+          <div
+            class="container d-flex flex-column align-items-start justify-content-end pl-0"
+            id="text-container"
+          >
             <div class="d-flex mr-0 pr-0">
               <i class="bi bi-patch-check-fill" id="verified-btn"></i>
               <p class="lead">Verified artist</p>
@@ -181,15 +188,22 @@
                 <h2 class="col-2 mx-0 px-0" id="tag-pick">Artist Pick</h2>
               </div>
               <div class="col-12 d-flex pl-0" id="playlist-column">
-                <ul class="list-group col-sm-12 col-md-12 col-l-10 pb-0" id="playlist-list">
+                <ul
+                  class="list-group col-sm-12 col-md-12 col-l-10 pb-0"
+                  id="playlist-list"
+                >
                   <li class="list-group-item d-flex pb-0 play-song">
                     <p class="col-md-1">1</p>
                     <img
-                      class="col-md-2 album-list-cover band-pic" id="test-band-pic"
+                      class="col-md-2 album-list-cover band-pic"
+                      id="test-band-pic"
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-sm-6 col-md-3 track-title" id="test-band-name">
+                    <p
+                      class="col-sm-6 col-md-3 track-title"
+                      id="test-band-name"
+                    >
                       Another One Bites The Dust - Remastered 2011
                     </p>
                     <p class="col-md-3 rank" id="test-rank">1,013,238,772</p>
@@ -202,7 +216,9 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-sm-6 col-md-3 track-title">Bohemian Rhapsody - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">
+                      Bohemian Rhapsody - Remastered 2011
+                    </p>
                     <p class="col-md-3 rank">1,497,986,258</p>
                     <p class="col-md-3 duration">5:54</p>
                   </li>
@@ -213,7 +229,9 @@
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-sm-6 col-md-3 track-title">Don't Stop Me Now - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">
+                      Don't Stop Me Now - Remastered 2011
+                    </p>
                     <p class="col-md-3 rank">1,063,959,983</p>
                     <p class="col-md-3 duration">3:29</p>
                   </li>
@@ -224,7 +242,9 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
                       alt=""
                     />
-                    <p class="col-sm-6 col-md-3 track-title">Under Pressure - Remastered 2011</p>
+                    <p class="col-sm-6 col-md-3 track-title">
+                      Under Pressure - Remastered 2011
+                    </p>
                     <p class="col-md-3 rank">900,225,026</p>
                     <p class="col-md-3 duration">4:08</p>
                   </li>
@@ -235,7 +255,9 @@
                       src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                       alt=""
                     />
-                    <p class="col-sm-6 col-md-3 track-title">We Will Rock You - Remastered</p>
+                    <p class="col-sm-6 col-md-3 track-title">
+                      We Will Rock You - Remastered
+                    </p>
                     <p class="col-md-3 rank">705,225,721</p>
                     <p class="col-md-3 duration">2:02</p>
                   </li>
@@ -244,12 +266,12 @@
                 <ul class="list-group col-2 pb-0" id="playlist-current-track">
                   <li class="list-group-item" id="artist-pick">
                     <img
-                    class="current-track"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
-                    alt="Queen"
-                  />
-                  <p class="current-track-title">Queen best of</p>
-                  <figcaption>Playlist</figcaption>
+                      class="current-track"
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
+                      alt="Queen"
+                    />
+                    <p class="current-track-title">Queen best of</p>
+                    <figcaption>Playlist</figcaption>
                   </li>
                 </ul>
               </div>
@@ -316,7 +338,7 @@
           <div
             class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
           >
-            <div class="timePlayed">0:12</div>
+            <div class="timePlayed">0:00</div>
             <div class="progress mx-2" style="height: 2px">
               <div
                 class="progress-bar bg-white"
