--- a/welcome.html
+++ b/welcome.html
@@ -248,6 +248,16 @@
               </div>
             </div>
           </div>
+          <!--Loading-->
+          <div id="loading" class="d-flex justify-content-center">
+            <div
+              class="spinner-border"
+              style="width: 5rem; height: 5rem"
+              role="status"
+            >
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
           <!--Cards-->
 
           <div class="row" id="cardstart">
