--- a/artist.html
+++ b/artist.html
@@ -164,10 +164,12 @@
         <div class="container col-10 mr-0 pl-0" id="playlist-container">
           <div class="row d-flex justify-content-start">
             <div
+              id="change-button"
               class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
             >
               <i
-                class="bi bi-pause-circle-fill col-2 mr-4"
+                onclick="colorChange()"
+                class="bi bi-play-circle-fill col-2 mr-4"
                 id="pause-button"
               ></i>
             </div>
