--- a/album.html
+++ b/album.html
@@ -222,9 +222,10 @@
           <div class="row bgBlackTransparent">
             <div class="col-12 d-flex align-items-center my-3">
               <div
+                id="change-button"
                 class="playButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
               >
-                <i class="bi bi-play-fill"></i>
+                <i onclick="buttonChange()" class="bi bi-play-fill"></i>
               </div>
               <div class="heart mx-3 text-white">
                 <i class="bi bi-heart"></i>
