--- a/album.html
+++ b/album.html
@@ -227,8 +227,8 @@
               >
                 <i onclick="buttonChange()" class="bi bi-play-fill"></i>
               </div>
-              <div class="heart mx-3 text-white">
-                <i class="bi bi-heart"></i>
+              <div id="change-heart" class="heart mx-3 text-white">
+                <i onclick="heartChange()" class="bi bi-heart"></i>
               </div>
               <div class="dots text-white mx-3">
                 <i class="bi bi-three-dots"></i>
