--- a/album.html
+++ b/album.html
@@ -297,7 +297,9 @@
             <div class="playerSongArtist px-2">Queen</div>
           </div>
           <div class="playerSongIcons d-flex align-items-center">
-            <div class="playerHeart px-3"><i class="bi bi-heart"></i></div>
+            <div id="change-heart2" class="playerHeart px-3">
+              <i onclick="heartChange3()" class="bi bi-heart"></i>
+            </div>
             <div class="playerLaptop"><i class="bi bi-laptop"></i></div>
           </div>
         </div>
@@ -317,9 +319,10 @@
               <i class="bi bi-skip-start-fill"></i>
             </div>
             <div
+              id="change-button2"
               class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
             >
-              <i class="bi bi-play-fill"></i>
+              <i onclick="buttonChange3()" class="bi bi-play-fill"></i>
             </div>
             <div
               class="iconNext px-2 d-flex justify-content-center align-items-center"
@@ -354,7 +357,9 @@
         <div class="col-3 d-flex justify-content-end align-items-center">
           <div class="listIcon px-2"><i class="bi bi-list"></i></div>
           <div class="computerIcon px-2"><i class="bi bi-pc-display"></i></div>
-          <div class="volumeIcon px-2"><i class="bi bi-volume-up"></i></div>
+          <div id="change-volume" class="volumeIcon px-2">
+            <i onclick="changeVolume()" class="bi bi-volume-up"></i>
+          </div>
           <div class="progress" style="height: 2px">
             <div
               class="progress-bar bg-white"
