--- a/artist.html
+++ b/artist.html
@@ -168,7 +168,7 @@
               class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
             >
               <i
-                onclick="colorChange()"
+                onclick="buttonChange()"
                 class="bi bi-play-circle-fill col-2 mr-4"
                 id="pause-button"
               ></i>
@@ -301,7 +301,9 @@
             <div class="playerSongArtist px-2">Queen</div>
           </div>
           <div class="playerSongIcons d-flex align-items-center">
-            <div class="playerHeart px-3"><i class="bi bi-heart"></i></div>
+            <div id="change-heart" class="playerHeart px-3">
+              <i onclick="heartChange()" class="bi bi-heart"></i>
+            </div>
             <div class="playerLaptop"><i class="bi bi-laptop"></i></div>
           </div>
         </div>
@@ -321,9 +323,10 @@
               <i class="bi bi-skip-start-fill"></i>
             </div>
             <div
+              id="change-button2"
               class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
             >
-              <i class="bi bi-play-fill"></i>
+              <i onclick="buttonChange3()" class="bi bi-play-fill"></i>
             </div>
             <div
               class="iconNext px-2 d-flex justify-content-center align-items-center"
@@ -358,7 +361,9 @@
         <div class="col-3 d-flex justify-content-end align-items-center">
           <div class="listIcon px-2"><i class="bi bi-list"></i></div>
           <div class="computerIcon px-2"><i class="bi bi-pc-display"></i></div>
-          <div class="volumeIcon px-2"><i class="bi bi-volume-up"></i></div>
+          <div id="change-volume" class="volumeIcon px-2">
+            <i onclick="changeVolume()" class="bi bi-volume-up"></i>
+          </div>
           <div class="progress" style="height: 2px">
             <div
               class="progress-bar bg-white"
