Updates on Styling & Script

--- a/welcome.html
+++ b/welcome.html
@@ -148,7 +148,7 @@
 
         <!--Main Page-->
         <!--Prev,Next Buttons-->
-        <div id="col-10" class="col-12 col-md-8 col-lg-8 col-xl-10">
+        <div id="col-10" class="col-12 col-md-8 col-lg-8 col-xl-10 pl-5">
           <div class="row">
             <div class="col d-flex justify-content-start">
               <div class="prev-next-buttons">
@@ -259,36 +259,38 @@
             </div>
           </div>
           <!--Cards-->
-
-          <div class="row" id="cardstart">
-            <h1 class="ml-4 mb-4">Good Morning</h1>
-            <div class="col-12 pl-3 row" id="topsidecards">
-              <div class="sidecards col-2">
-                <img class="col-4" src="" alt="" />
-                <p class="col-8 sidetext"></p>
+          <div class="row mt-3 scrollit">
+            <div class="row" id="cardstart">
+              <h1 class="col-12 mb-4">Good Morning</h1>
+              <div class="col-3">
+                <a href="#">
+                  <div class="sidecards col-2">
+                    <img class="col-4" src="" alt="" />
+                    <p class="col-8 sidetext"></p></div
+                ></a>
               </div>
             </div>
-          </div>
 
-          <div class="row pl-3 mt-3" id="mainrow">
-            <h2 class="ml-3 mb-4">Recently Played</h2>
-            <div class="col-12 pl-3 row" id="firstAlbumRow">
-              <div class="albumCard">
-                <img class="col-11" src="" alt="" />
-                <div class="albumText">
-                  <p>Artist</p>
-                  <p>Song</p>
+            <div class="row pl-3 mt-3" id="mainrow">
+              <h2 class="col-12 ml-3 mb-4">Recently Played</h2>
+              <div class="col-12 pl-3 row" id="firstAlbumRow">
+                <div class="albumCard">
+                  <img class="col-11" src="" alt="" />
+                  <div class="albumText">
+                    <p>Artist</p>
+                    <p>Song</p>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <h2 class="ml-3 mb-4 mt-5">Artists to Try</h2>
-            <div class="col-md-8 col-lg-12 pl-3 row" id="secondAlbumRow">
-              <div class="albumCard">
-                <img class="col-11" src="" alt="" />
-                <div class="albumText">
-                  <p>Artist</p>
-                  <p id="podcast-hook">Check out talented artists!</p>
+              <h2 class="ml-3 mb-4 mt-5">Artists to Try</h2>
+              <div class="col-md-8 col-lg-12 pl-3 row" id="secondAlbumRow">
+                <div class="albumCard">
+                  <img class="col-11" src="" alt="" />
+                  <div class="albumText">
+                    <p>Artist</p>
+                    <p id="podcast-hook">Check out talented artists!</p>
+                  </div>
                 </div>
               </div>
             </div>
