--- a/album.html
+++ b/album.html
@@ -225,7 +225,10 @@
                 id="change-button"
                 class="playButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
               >
-                <i onclick="buttonChange()" class="bi bi-play-fill"></i>
+                <i
+                  onclick="buttonChange(), document.getElementById(`sound1`).play()"
+                  class="bi bi-play-fill"
+                ></i>
               </div>
               <div id="change-heart" class="heart mx-3 text-white">
                 <i onclick="heartChange()" class="bi bi-heart"></i>
@@ -322,7 +325,10 @@
               id="change-button2"
               class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
             >
-              <i onclick="buttonChange3()" class="bi bi-play-fill"></i>
+              <i
+                onclick="buttonChange3(), document.getElementById(`sound1`).play()"
+                class="bi bi-play-fill"
+              ></i>
             </div>
             <div
               class="iconNext px-2 d-flex justify-content-center align-items-center"
@@ -373,6 +379,7 @@
         </div>
       </div>
     </div>
+    <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
     <script src="album.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
