--- a/welcome.html
+++ b/welcome.html
@@ -401,6 +401,7 @@
         </div>
       </div>
     </div>
+    <div id="music"></div>
     <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
     <script src="welcome.js"></script>
     <script
