--- a/artist.html
+++ b/artist.html
@@ -168,7 +168,7 @@
               class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
             >
               <i
-                onclick="buttonChange()"
+                onclick="buttonChange(), document.getElementById(`sound1`).play()"
                 class="bi bi-play-circle-fill col-2 mr-4"
                 id="pause-button"
               ></i>
@@ -326,7 +326,10 @@
               id="change-button2"
               class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
             >
-              <i onclick="buttonChange3()" class="bi bi-play-fill"></i>
+              <i
+                onclick="buttonChange3(), document.getElementById(`sound1`).play()"
+                class="bi bi-play-fill"
+              ></i>
             </div>
             <div
               class="iconNext px-2 d-flex justify-content-center align-items-center"
@@ -377,6 +380,7 @@
         </div>
       </div>
     </div>
+    <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
