last commit before merging

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         <form action="" method="get">
         <div class="login">
             <input type="text" autocomplete="username" placeholder="Email address or username" id="username">
-            <input type="password" minlength="6" maxlength="20" autocomplete="current-password" placeholder="Password" id="password">
+            <input type="password" minlength="1" autocomplete="current-password" placeholder="Password" id="password">
         </div>
         <div class="getIn">
             <div class="remember-user">
