--- a/artist.html
+++ b/artist.html
@@ -154,7 +154,6 @@
               class="container d-flex flex-column align-items-start justify-content-end pl-0"
               id="text-container"
             >
-
               <div class="d-flex mr-0 pr-0">
                 <i class="bi bi-patch-check-fill" id="verified-btn"></i>
                 <p class="lead">Verified artist</p>
@@ -163,13 +162,12 @@
               <p class="mt-3" id="monthly-listeners">
                 37,120,133 monthly listeners
               </p>
-
+              <!-- 
               <i
                 onclick="buttonChange(), document.getElementById(`sound1`).play()"
                 class="bi bi-play-circle-fill col-2 mr-4"
                 id="pause-button"
-              ></i>
-
+              ></i> -->
             </div>
           </div>
           <!-- Playlist  -->
@@ -209,7 +207,6 @@
                       class="list-group col-sm-12 col-md-12 col-l-10 pb-0"
                       id="playlist-list"
                     >
-
                       <li class="list-group-item d-flex pb-0 play-song">
                         <p class="col-md-1">1</p>
                         <img
@@ -300,7 +297,7 @@
                   </div>
                 </div>
 
-                      Another One Bites The Dust - Remastered 2011
+                <!-- Another One Bites The Dust - Remastered 2011
                     </p>
                     <p class="col-md-3 rank" id="test-rank">1,013,238,772</p>
                     <p class="col-md-3 duration" id="test-duration">3:34</p>
@@ -365,8 +362,7 @@
                     <p class="current-track-title">Queen best of</p>
                     <figcaption>Playlist</figcaption>
                   </li>
-                </ul>
-
+                </ul> -->
               </div>
             </div>
           </div>
