--- a/album.html
+++ b/album.html
@@ -281,6 +281,7 @@
         </div>
       </div>
     </div>
+
     <!-- Music Player Bar -->
     <div class="container-fluid footer fixed-bottom musicPlayer">
       <div class="row mt-3">
@@ -379,7 +380,7 @@
         </div>
       </div>
     </div>
-    <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
+    <div id="music"></div>
     <script src="album.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
