--- a/artist.html
+++ b/artist.html
@@ -394,7 +394,8 @@
         </div>
       </div>
     </div>
-    <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
+    <div id="music"></div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
