Songs changing onclick

--- a/search.html
+++ b/search.html
@@ -365,7 +365,7 @@
         </div>
       </div>
     </div>
-    <audio id="sound1" src="/assets/Bite.mp3" preload="auto"></audio>
+    <div id="music"><audio id="sound1" src="" preload="auto"></audio></div>
     <script src="search.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
