--- a/album.html
+++ b/album.html
@@ -380,7 +380,7 @@
         </div>
       </div>
     </div>
-    <div id="music"></div>
+    <div id="music"><audio id="sound1" src="" preload="auto"></audio></div>
     <script src="album.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
