--- a/artist.html
+++ b/artist.html
@@ -394,8 +394,7 @@
         </div>
       </div>
     </div>
-    <div id="music"></div>
-
+    <div id="music"><audio id="sound1" src="" preload="auto"></audio></div>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
