form redirects to the welcome page

--- a/login.html
+++ b/login.html
@@ -38,9 +38,9 @@
         <div class="line"><strong>OR</strong></div>
         <!-- Login field -->
         <div id="error"></div>
-        <form action="" method="get">
+        <form action="./welcome.html" method="get">
         <div class="login">
-            <input type="text" autocomplete="username" placeholder="Email address or username" id="username">
+            <input type="text" autocomplete="username" placeholder="Email address or username" id="username" value="Damian">
             <input type="password" minlength="1" autocomplete="current-password" placeholder="Password" id="password">
         </div>
         <div class="getIn">
