Updates on styling

--- a/album.html
+++ b/album.html
@@ -195,7 +195,7 @@
               <div class="d-flex flex-column">
                 <div class="recordType text-uppercase">Album</div>
                 <h2 class="albumTitle">Bohemian</h2>
-                <div class="d-flex">
+                <div class="d-flex artistFullDiv">
                   <div
                     class="artistImageDiv rounded-circle d-flex align-item-center justify-content-center"
                   >
@@ -212,7 +212,9 @@
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
                     <div class="releaseYear">2022</div>
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
-                    <div class="quantityDuration">4 songs, 3 hr 14 min</div>
+                    <div class="quantityDuration pr-4">
+                      4 songs, 3 hr 14 min
+                    </div>
                   </div>
                 </div>
               </div>
