--- a/artist.html
+++ b/artist.html
@@ -175,14 +175,16 @@
                     id="pause-button"
                   ></i>
                 </div>
-
-                <p
-                  class="d-inline border mr-4"
-                  style="margin-block: auto"
-                  id="follow"
-                >
-                  Follow
-                </p>
+                <div id="following">
+                  <p
+                    class="d-inline border mr-4"
+                    style="margin-block: auto"
+                    id="follow"
+                    onclick="addColor()"
+                  >
+                    Follow
+                  </p>
+                </div>
                 <p class="d-inline" style="margin-block: auto" id="dots">
                   <i class="bi bi-three-dots"></i>
                 </p>
