--- a/artist.html
+++ b/artist.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/artist.css" />
-    <title>Document</title>
+    <title>Artist Page</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -162,7 +162,7 @@
             </div>
           </div>
           <!-- Playlist  -->
-          <div class="row">
+          <div class="row mr-0">
             <div class="col-12 mr-0 pl-0" id="playlist-container">
               <div class="row d-flex">
                 <div
