--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="search.css" />
-    <title>Search</title>
+    <title>Search for Songs</title>
   </head>
   <body>
     <div class="containerFluid container-fluid">
@@ -173,7 +173,7 @@
                     type="text"
                     class="form-control searchBarInput"
                     aria-label="Amount (to the nearest dollar)"
-                    placeholder="What do you want to search?"
+                    placeholder="Search for music"
                   />
                   <div class="input-group-append">
                     <span class="input-group-text xIconBar"
