just the login page, man

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         <div class="line"><strong>OR</strong></div>
         <!-- Login field -->
         <div id="error"></div>
-        <form action="./welcome.html" + getUserName() method="get">
+        <form action="./welcome.html" method="get">
         <div class="login">
             <input type="text" autocomplete="username" placeholder="Email address or username" id="username">
             <input type="password" minlength="1" autocomplete="current-password" placeholder="Password" id="password">
